--- a/apps/web/src/index.html
+++ b/apps/web/src/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Title</title>
   </head>
-  <body>
+  <body style="margin: 0">
     <script type="module" src="index.ts"></script>
     <div id="nanoforge-loader">
       <img id="loader-logo" src="assets/logo.png" alt="logo" />
